# thetastar-poc

./: .project  Bashes-SHomron.kml  CMakeLists.txt  Shark1.kml  Shark2.kml  Shark3.kml  Shark4.kml  Shark5.kml  Shark6.kml  main.cpp  thetastarc-poc.kdev4  thetastarcpoc.kdev4
.kdev4/: thetastarc-poc.kdev4
Modules/: FindGEOS.cmake  FindPROJ4.cmake
